  (Andrew Bennetts, #522637)

* strace test-helper tests cope with the new Ubuntu policy of not allowing
  users to attach to their own processes by default.
  (Martin Pool, #626679)

* Test classes like ``TestCase``, ``TestLoader``, and ``TestSuite`` should
  be available from ``bzrlib.tests.*``. They used to be, but were
  accidentally removed. (John Arbash Meinel, #627438)

* ``Transport.stat`` on a symlink, including a transport pointing directly
  to a symlink, now returns information about the symlink.
  (Martin Pool)

* Wait for the SSH server to actually finish, rather than just waiting for
  it to negotiate the key exchange. (John Arbash Meinel, #626876)

Improvements
************

* ``bzr remove`` now just backs up changed files instead of exiting,
  forcing you to choose to either keep or delete them. Bazaar will now delete
  the files if they can easily be recovered using revert, otherwise they
  will be backed up (adding an extention of the form .~#~).
  (Marius Kruger, #400554)

* ``bzr revert`` and ``bzr status`` are up to 15% faster on large trees
  with many changes by not repeatedly building a list of all file-ids.
  (Andrew Bennetts)

* Decrease memory consumption when many chk index pages are loaded. (Such
  as during ``bzr co`` or ``bzr ls -R`` of a large tree.) Often we need to
  read many chk pages because the individual chk map nodes will be spread
  randomly. Peak memory for 'bzr ls -R' on a large tree dropped from 396MB
  down to 247MB, expect even more significant savings on 64-bit platforms.
  (John Arbash Meinel)

* ``DirState`` internals use a little bit less memory. For bzr.dev it
  drops the memory from 1MB down to about 800kB. And replaces a few
  thousand tuples and sets with StaticTuple.  (John Arbash Meinel)

* Inventory entries now consume less memory (on 32-bit Ubuntu file entries
  have dropped from 68 bytes to 40, and directory entries from 120 bytes
  to 48).  (Andrew Bennetts)
